--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 
   <main class="tasks">
     <div class="u-wrapper-md">
-      <ul class="tasks-container">
+      <ul id="tasks-container" class="tasks-container">
         <!-- <span class="u-h4">Create a task</span> -->
-        <li class="tasks-item is-red">
+        <!-- <li class="tasks-item is-red">
           <div class="tasks-info">
             <div>
               <span class="tasks-name u-h5">Learning HTML</span>
@@ -121,7 +121,7 @@
           <button class="u-button with-icon is-outlined is-small">
             <img src="./static/icons/cerrar.svg" alt="">
           </button>
-        </li>
+        </li> -->
       </ul>
     </div>
   </main>
@@ -137,6 +137,7 @@
   </footer>
 
   <script src="./static/js/index.js" type="application/javascript"></script>
+  <script src="./static/js/tasks.js" type="application/javascript"></script>
 
 </body>
 
