--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <link rel="icon" sizes="128x128" href="./static/icons/icon-app.png" />
+  <link rel="apple-touch-icon" sizes="128x128" href="./static/icons/icon-app.png" />
 
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./static/css/styles.css">
