Algunas correcciones sobre los estilos

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   </main>
 
   <footer id="contact" class="footer">
-    <div class="u-wrapper">
+    <div class="u-wrapper-md">
       <hr>
       <div class="footer-content">
         <div class="footer-primary">
