correccion boton outlined

--- a/index.html
+++ b/index.html
@@ -50,13 +50,12 @@
   <main class="tasks">
     <div class="u-wrapper-md">
       <ul id="tasks-container" class="tasks-container is-empty">
-        <!-- <span id="tasks-container-empty" class="u-h4">Create a task</span> -->
       </ul>
     </div>
   </main>
 
   <footer id="contact" class="footer">
-    <div class="u-wrapper-md">
+    <div class="u-wrapper">
       <hr>
       <div class="footer-content">
         <div class="footer-primary">
