--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
 
   <main class="tasks">
     <div class="u-wrapper-md">
-      <ul id="tasks-container" class="tasks-container is-empty">
-      </ul>
+      <ul id="tasks-container" class="tasks-container is-empty"></ul>
     </div>
   </main>
 
